first commit in html page to save

--- a/06_dom/01.html
+++ b/06_dom/01.html
@@ -2,12 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    
+    <style>
+        .bg_black{
+            background-color: #212121;
+            color: white;
+        }
+    </style>
     <title>DOM Learning</title>
 </head>
-<body>
-    <div class="bg_black">
-        <h1 class="heading">
+<body class="bg_black">
+    <div>
+        <h1 id="title" class="heading">
             DOM(Document Object Model) Learning on chai aur code
         </h1>
         <p>Lorem ipsum dolor sit amet.</p>
