DOM Manipulation foreach case

--- a/06_dom/01.html
+++ b/06_dom/01.html
@@ -12,10 +12,28 @@
 </head>
 <body class="bg_black">
     <div>
-        <h1 id="title" class="heading">
-            DOM(Document Object Model) Learning on chai aur code
-        </h1>
+        <h1 id="title" class="heading">DOM(Document Object Model) Learning on XanderViskoi<span style="display: none;">Test Text</span></h1>
+        <h2>Lorem ipsum dolor sit amet consectetur.</h2>
+        <h2>Lorem ipsum consectetur.Yes done </h2>
+        <h2 class="heading">Lorem sit amet consectetur. Not working</h2>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
+    <input type="password" name="" id="">
+    <ul>
+        <li class="ListItem">one</li>
+        <li class="ListItem">two</li>
+        <li class="ListItem">three</li>
+        <li class="ListItem">four</li>
+    </ul>
 </body>
 </html>
+<!-- Set Attribute in console will always overwrite the predefined -->
+<!-- id.innertextContent will give all the text whether hidden or not -->
+<!-- id.innertext will just show the content which is dispalyed in document -->
+<!-- id.innerHTML will provide all the inner Html information of specified id -->
+<!-- document.querySelector('h1') will give first h1 (it can be anything h1 , h2 or any tag) -->
+<!-- NodeList is not an array  it does not have map function, while array has (somewhat similar to array but can't perform all functions array) -->
+<!-- Use forEach on nodelist -->
+<!-- To use map functions, and many more on nodelist first convert nodelist to a basic array -->
+<!-- Array.from(Nodelist) will convert into array -->
+<!-- Array.from(HTMLCollection) for conversion of a html collection into array -->
