--- a/06_dom/02.html
+++ b/06_dom/02.html
@@ -21,7 +21,26 @@
     console.log(parent.children[1].innerHTML);
     for (let i = 0; i<parent.children.length; i++){
         console.log(parent.children[i].innerHTML);
-        parent.children[i].style.color = 'orange'
+        parent.children[i].style.color = 'magenta'
+        parent.children[i].style.borderRadius = '20px'
+        parent.children[i].style.margin= '5px'
+        parent.children[i].style.padding = '5px'
+        parent.children[i].style.display = 'inline'        
+        parent.children[i].style.textalign = 'center'        
+        parent.children[i].style.border = '2px solid #899821'
     }
+
+    parent.children[1].style.color = "green"
+    // console.log(parent.firstElementChild);
+    // console.log(parent.lastElementChild);
+
+    const dayOne = document.querySelector('.day')
+    // console.log(dayOne);
+    // console.log(dayOne.parentElement);
+    // console.log(dayOne.nextElementSibling);
+
+    console.log("NODES: ", parent.childNodes); //behind the scene complex tree structure , every element has child nodes //16:00 child nodes
+
+
 </script>
 </html>
