--- a/07_Projects/2_BMIIndex/2.html
+++ b/07_Projects/2_BMIIndex/2.html
@@ -9,13 +9,13 @@
     <title>BMI Calculator</title>
   </head>
   <body>
-    <nav id="nav-main">
+    <!-- <nav id="nav-main">
         <span>Modes: <select name="" id="">
             <option class="nav1" id="light">Light</option>
             <option class="nav1" id="dark">Dark</option>
         </select> 
         </span>
-    </nav>
+    </nav> -->
     <nav>
       <a href="/" aria-current="page">Home</a>
       <a target="_blank" href="https://github.com/XanderViskoii/JavaScript"
@@ -38,5 +38,5 @@
       </form>
     </div>
   </body>
-  <script src="2.js"></script>
+  <script src= "2.js"> </script>
 </html>
