--- a/08_events/6_RandomColourGenerate/6.html
+++ b/08_events/6_RandomColourGenerate/6.html
@@ -5,13 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Number Guessing Game</title>
-    <link rel="stylesheet" href="/07_Projects/style.css" />
+    <link rel="stylesheet" href="/07_Projects/style.css"/>
   </head>
   <body style="background-color: #212121; color: #fff">
     <nav>
       <a href="/" aria-current="page">Home</a>
-      <a target="_blank" href="https://github.com/XanderViskoii/JavaScript"
-        >GitHub Repo</a
+      <a target="_blank" href="https://github.com/XanderViskoii/JavaScript">GitHub Repo</a
       >
     </nav>
 
