--- a/09_advance_one/Apirequest.html
+++ b/09_advance_one/Apirequest.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body style="background-color: #212121; color: blanchedalmond;">
+<body style="background-color: #111111; color: blanchedalmond;">
     0	UNSENT	Client has been created. open() not called yet.
     1	OPENED	open() has been called.
     2	HEADERS_RECEIVED send() has been called, and headers    and                     status are available.
@@ -13,14 +13,25 @@
     4	DONE	The operation is complete.
 </body>
 <script>
-    const requestURL = 'https://api.github.com/users/XanderViskoii'
+    const requestURL = 'https://api.github.com/users/DeepakY-Git'
     const xhr = new XMLHttpRequest();
     xhr.open('GET', requestURL);
     console.log("HERE");
     xhr.onreadystatechange = function(){
         console.log(xhr.readyState);
         if (xhr.readyState === 4){
-            console.log(this.responseText);
+            const data = JSON.parse(this.responseText) //To convert string to object
+            console.log(typeof data);
+            console.log(data);
+            console.log(data.bio);
+            console.log(data.public_repos);
+            const date_creation = (data.created_at);
+            console.log(data.html_url);
+            console.log(data.company);
+            console.log(data.following_url);
+            // for (const key in data){
+            //     console.log(`${key}:${data[key]}`);
+            // }
         }
     }
     xhr.send()
